add new article and display clicked on full article

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <button class="accent-btn"><i class="fa-regular fa-pen-to-square"></i> Write</button>
   </header>
 
-  <div class="form-container">
+  <div class="form-container hidden">
     <form>
       <div>
         <label for="title">Title</label>
